--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,3 +12,5 @@ services:
       MYSQL_DATABASE: nest
     ports:
       - 3306:3306
+    volumes:
+      - ./.docker/mysql:/docker-entrypoint-initdb.d
